--- a/src/assets/style/app.sass
+++ b/src/assets/style/app.sass
@@ -21,12 +21,10 @@ $link-focus-border: $primary
 // Import Bulma and Buefy styles
 @import "~bulma"
 @import "~buefy/src/scss/buefy"
-// @import "~bulma-badge/badge"
 @import "~bulma-divider/divider"
 @import "~bulma-pageloader/pageloader"
 @import "~bulma-pricingtable/pricing-table"
-// @import "~bulma-steps/bulma-steps"
-// @import "~bulma-timeline/bulma-timeline"
+@import "~bulma-timeline/timeline"
 
 @import "./helpers"
 @import "./custom"
